--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -8,9 +8,17 @@ $font-stack: "Montserrat", sans-serif;
     box-sizing: border-box;
 }
 
-html, body {
+html,
+body {
     font-family: $font-stack;
     scroll-behavior: smooth;
+}
+
+.container {
+    max-width: 1300px;
+    margin: 0 auto;
+    padding: 0 20px;
+    overflow: auto;
 }
 
 .btn {
@@ -29,13 +37,14 @@ html, body {
 }
 
 .button-2 {
-    background: #000;
+    background: #2206bf;
     color: #fff;
 }
 
 form {
     .form-group {
         margin-bottom: 1em;
+        color: #fff;
     }
 
     .form-control {
@@ -53,4 +62,60 @@ form {
 //mainheader
 .mainheader-row {
     display: flex;
+    margin-bottom: 2em;
+
+    .mainheader-text {
+        width: 40%;
+        margin-top: 5em;
+        font-size: 2em;
+        font-weight: lighter;
+
+        .button-1 {
+            margin-top: 5em;
+        }
+    }
+
+    .mainheader-img img {
+        width: 800px;
+        height: 800px;
+    }
+}
+
+//contact 
+#contact {
+    background: #e71ed3;
+    width: 80%;
+    margin: 0 auto;
+    border-top-left-radius: 80px;
+    border-bottom-right-radius: 80px;
+    color: #fff;
+    h2 {
+        font-weight: lighter;
+        font-size: 3em;
+        margin: 2em 0 1em 0;
+        text-align: center;
+        color: #fff;
+    }
+    p {
+        font-size: 3em;
+        text-align: center;
+        font-weight: lighter;
+        margin-bottom: 2em;
+    }
+
+    form {
+        width: 60%;
+        margin: 0 auto;
+        button {
+            margin-bottom: 3em;
+        }
+    }
+}
+
+//footer 
+#footer {
+    
+    text-align: center;
+    padding: 3em;
+
 }
